--- a/AIctus_modelos.ipynb
+++ b/AIctus_modelos.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9c0f4614-a135-40e7-99c2-34fdd8f5130f",
    "metadata": {},
    "outputs": [],
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "1018db18-58a4-4235-a39d-b824c94e118c",
    "metadata": {},
    "outputs": [
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "4583c058-9e6d-4bf6-b2c1-43020d9cf7ec",
    "metadata": {},
    "outputs": [
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "cf15c626-b36b-46b3-9de2-a8b73aaffca9",
    "metadata": {},
    "outputs": [
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "992f3f70-a13c-4723-8ade-ba62ac557418",
    "metadata": {},
    "outputs": [
@@ -1207,11 +1207,11 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Ingrese la edad (en años):  90\n",
-      "Ingrese el IMC:  31\n",
-      "Ingrese el nivel promedio de glucosa:  210\n",
+      "Ingrese la edad (en años):  10\n",
+      "Ingrese el IMC:  24\n",
+      "Ingrese el nivel promedio de glucosa:  80\n",
       "¿Es fumador? (1 = Sí, 0 = No):  0\n",
-      "¿Tiene hipertensión? (1 = Sí, 0 = No):  1\n",
+      "¿Tiene hipertensión? (1 = Sí, 0 = No):  0\n",
       "¿Tiene enfermedad cardíaca? (1 = Sí, 0 = No):  1\n"
      ]
     },
@@ -1220,34 +1220,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Datos ingresados:\n",
-      "   hypertension  heart_disease  smoker rango_etario rango_imc  \\\n",
-      "0             1              1       0      anciano     obeso   \n",
-      "\n",
-      "  rango_glicemia_promedio  \n",
-      "0     extremadamente_alta  \n",
-      "\n",
-      "Datos transformados para el modelo:\n",
-      "   smoker  hypertension  heart_disease  rango_glicemia_promedio_baja  \\\n",
-      "0       0             1              1                             0   \n",
-      "\n",
-      "   rango_glicemia_promedio_extremadamente_alta  \\\n",
-      "0                                         True   \n",
-      "\n",
-      "   rango_glicemia_promedio_muy_alta  rango_glicemia_promedio_normal  \\\n",
-      "0                                 0                               0   \n",
-      "\n",
-      "   rango_etario_adulto  rango_etario_adulto_joven  rango_etario_anciano  \\\n",
-      "0                    0                          0                  True   \n",
-      "\n",
-      "   rango_etario_anciano_joven  rango_etario_infante  rango_imc_obeso  \\\n",
-      "0                           0                     0             True   \n",
-      "\n",
-      "   rango_imc_saludable  rango_imc_sobrepeso  \n",
-      "0                    0                    0  \n",
-      "\n",
-      "El modelo predice que existe riesgo de stroke.\n",
-      "Probabilidad estimada de stroke: 0.9830\n"
+      "El modelo predice que NO existe riesgo de stroke.\n",
+      "Probabilidad estimada de stroke: 0.0116\n"
      ]
     }
    ],
@@ -1307,26 +1281,22 @@
     "    \"rango_glicemia_promedio\": [rango_glicemia_promedio]\n",
     "})\n",
     "\n",
-    "print(\"\\nDatos ingresados:\")\n",
-    "print(input_data)\n",
     "\n",
     "# --- Paso 4: Transformar la entrada para que coincida con el formato de entrenamiento ---\n",
     "# Se asume que durante el entrenamiento se aplicó one-hot encoding en las variables categóricas.\n",
     "# Aquí se aplica el mismo procedimiento.\n",
     "input_data_encoded = pd.get_dummies(input_data, columns=[\"rango_etario\", \"rango_imc\", \"rango_glicemia_promedio\"])\n",
     "\n",
-    "# Si no tienes definida la variable train_columns, intenta definirla a partir de X_train.\n",
+    "\n",
     "try:\n",
     "    train_columns\n",
     "except NameError:\n",
-    "    # Asegúrate de haber definido X_train previamente con el mismo preprocesamiento.\n",
+    "    \n",
     "    train_columns = X_train.columns.tolist()\n",
     "    \n",
     "# Reindexar para que tenga exactamente las mismas columnas que el modelo\n",
     "input_data_encoded = input_data_encoded.reindex(columns=train_columns, fill_value=0)\n",
     "\n",
-    "print(\"\\nDatos transformados para el modelo:\")\n",
-    "print(input_data_encoded)\n",
     "\n",
     "# --- Paso 5: Realizar la predicción ---\n",
     "pred = voting_clf.predict(input_data_encoded)\n",
