--- a/AIctus_modelos.ipynb
+++ b/AIctus_modelos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "9cb46b04-d9fa-409b-8407-33af56f8e474",
    "metadata": {},
    "outputs": [],
@@ -28,6 +28,8 @@
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, classification_report, confusion_matrix, roc_auc_score, roc_curve\n",
     "from sklearn.model_selection import learning_curve, cross_val_score, train_test_split\n",
     "\n",
+    "from tabulate import tabulate\n",
+    "\n",
     "\n",
     "# Para ignorar warnings\n",
     "import warnings\n",
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "9c0f4614-a135-40e7-99c2-34fdd8f5130f",
    "metadata": {},
    "outputs": [],
@@ -429,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "1018db18-58a4-4235-a39d-b824c94e118c",
    "metadata": {},
    "outputs": [
@@ -902,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "4583c058-9e6d-4bf6-b2c1-43020d9cf7ec",
    "metadata": {},
    "outputs": [
@@ -980,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "cf15c626-b36b-46b3-9de2-a8b73aaffca9",
    "metadata": {},
    "outputs": [
@@ -1199,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "992f3f70-a13c-4723-8ade-ba62ac557418",
    "metadata": {},
    "outputs": [
@@ -1209,7 +1211,7 @@
      "text": [
       "Ingrese la edad (en años):  10\n",
       "Ingrese el IMC:  24\n",
-      "Ingrese el nivel promedio de glucosa:  80\n",
+      "Ingrese el nivel promedio de glucosa:  82\n",
       "¿Es fumador? (1 = Sí, 0 = No):  0\n",
       "¿Tiene hipertensión? (1 = Sí, 0 = No):  0\n",
       "¿Tiene enfermedad cardíaca? (1 = Sí, 0 = No):  1\n"
@@ -1220,8 +1222,32 @@
      "output_type": "stream",
      "text": [
       "\n",
+      "Valores ingresados y categorías derivadas:\n",
+      "\n",
+      "╒═══════════════════════════╤═══════════╕\n",
+      "│ Variable                  │ Valor     │\n",
+      "╞═══════════════════════════╪═══════════╡\n",
+      "│ Edad (años)               │ 10.0      │\n",
+      "├───────────────────────────┼───────────┤\n",
+      "│ IMC                       │ 24.0      │\n",
+      "├───────────────────────────┼───────────┤\n",
+      "│ Nivel Promedio de Glucosa │ 82.0      │\n",
+      "├───────────────────────────┼───────────┤\n",
+      "│ Fumador                   │ No        │\n",
+      "├───────────────────────────┼───────────┤\n",
+      "│ Hipertensión              │ No        │\n",
+      "├───────────────────────────┼───────────┤\n",
+      "│ Enfermedad Cardíaca       │ Sí        │\n",
+      "├───────────────────────────┼───────────┤\n",
+      "│ Rango Etario              │ infante   │\n",
+      "├───────────────────────────┼───────────┤\n",
+      "│ Rango IMC                 │ saludable │\n",
+      "├───────────────────────────┼───────────┤\n",
+      "│ Rango Glucemia Promedio   │ normal    │\n",
+      "╘═══════════════════════════╧═══════════╛\n",
+      "\n",
       "El modelo predice que NO existe riesgo de stroke.\n",
-      "Probabilidad estimada de stroke: 0.0116\n"
+      "Probabilidad estimada de stroke: 1.16%\n"
      ]
     }
    ],
@@ -1283,8 +1309,8 @@
     "\n",
     "\n",
     "# --- Paso 4: Transformar la entrada para que coincida con el formato de entrenamiento ---\n",
-    "# Se asume que durante el entrenamiento se aplicó one-hot encoding en las variables categóricas.\n",
-    "# Aquí se aplica el mismo procedimiento.\n",
+    "# Acá se asume que durante el entrenamiento se aplicó one-hot encoding en las variables categóricas.\n",
+    "# Así que se aplica el mismo procedimiento. Pero si pruebas con un modelo que no requiera de one-hot encoding, puedes comentar esta línea.\n",
     "input_data_encoded = pd.get_dummies(input_data, columns=[\"rango_etario\", \"rango_imc\", \"rango_glicemia_promedio\"])\n",
     "\n",
     "\n",
@@ -1297,6 +1323,21 @@
     "# Reindexar para que tenga exactamente las mismas columnas que el modelo\n",
     "input_data_encoded = input_data_encoded.reindex(columns=train_columns, fill_value=0)\n",
     "\n",
+    "# --- Mostrar en tabla los valores ingresados ---\n",
+    "valores_ingresados = [\n",
+    "    [\"Edad (años)\", age],\n",
+    "    [\"IMC\", bmi],\n",
+    "    [\"Nivel Promedio de Glucosa\", avg_glucose],\n",
+    "    [\"Fumador\", \"Sí\" if smoker == 1 else \"No\"],\n",
+    "    [\"Hipertensión\", \"Sí\" if hypertension == 1 else \"No\"],\n",
+    "    [\"Enfermedad Cardíaca\", \"Sí\" if heart_disease == 1 else \"No\"],\n",
+    "    [\"Rango Etario\", rango_etario],\n",
+    "    [\"Rango IMC\", rango_imc],\n",
+    "    [\"Rango Glucemia Promedio\", rango_glicemia_promedio],\n",
+    "]\n",
+    "\n",
+    "print(\"\\nValores ingresados y categorías derivadas:\\n\")\n",
+    "print(tabulate(valores_ingresados, headers=[\"Variable\", \"Valor\"], tablefmt=\"fancy_grid\"))\n",
     "\n",
     "# --- Paso 5: Realizar la predicción ---\n",
     "pred = voting_clf.predict(input_data_encoded)\n",
@@ -1307,7 +1348,8 @@
     "    print(\"\\nEl modelo predice que existe riesgo de stroke.\")\n",
     "else:\n",
     "    print(\"\\nEl modelo predice que NO existe riesgo de stroke.\")\n",
-    "print(f\"Probabilidad estimada de stroke: {pred_proba[0]:.4f}\")\n"
+    "print(f\"Probabilidad estimada de stroke: {pred_proba[0] * 100:.2f}%\")\n",
+    "\n"
    ]
   },
   {
@@ -1406,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "id": "2c72ede9-e042-4de8-9f77-af83600cf81a",
    "metadata": {},
    "outputs": [
@@ -1416,7 +1458,7 @@
      "text": [
       "AUC original: 0.9650\n",
       "AUC con ruido: 0.9649\n",
-      "Diferencia de desempeño: 0.0002\n"
+      "Diferencia de desempeño: 0.0001\n"
      ]
     }
    ],
@@ -1505,20 +1547,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUC con ruido en heart_disease: 0.9562\n",
-      "Diferencia de desempeño: 0.0089\n",
+      "AUC con ruido en heart_disease: 0.9566\n",
+      "Diferencia de desempeño: 0.0085\n",
       "\n",
-      "AUC con ruido en hypertension: 0.9636\n",
+      "AUC con ruido en hypertension: 0.9635\n",
       "Diferencia de desempeño: 0.0015\n",
       "\n",
-      "AUC con ruido en smoker: 0.9653\n",
-      "Diferencia de desempeño: -0.0003\n",
+      "AUC con ruido en smoker: 0.9648\n",
+      "Diferencia de desempeño: 0.0002\n",
       "\n",
-      "AUC con ruido en rango_etario_anciano: 0.9541\n",
-      "Diferencia de desempeño: 0.0110\n",
+      "AUC con ruido en rango_etario_anciano: 0.9504\n",
+      "Diferencia de desempeño: 0.0146\n",
       "\n",
-      "AUC con ruido en rango_imc_obeso: 0.9645\n",
-      "Diferencia de desempeño: 0.0006\n",
+      "AUC con ruido en rango_imc_obeso: 0.9647\n",
+      "Diferencia de desempeño: 0.0004\n",
       "\n"
      ]
     }
@@ -1536,6 +1578,14 @@
     "    print(f\"AUC con ruido en {col}: {auc_noise:.4f}\")\n",
     "    print(f\"Diferencia de desempeño: {auc_original - auc_noise:.4f}\\n\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77cf5feb-41c9-46f5-9d60-3bd272384126",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
